<resources>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="descricao_de_icone">Ícone PetLove</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_name">PetLove</string>


    <string name="username">Nome de Usuário</string>
    <string name="cpf">CPF</string>
    <string name="celular">Celular</string>
    <string name="password">Senha</string>
    <string name="repassword">Confirme sua senha</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="sem_cadastro">Ainda não tenho cadastro</string>
    <string name="esqueci_senha">Esqueci minha senha</string>

    <string name="action_sign_in">Logar</string>
    <string name="action_register">Cadastrar</string>
    <string name="action_sign_in_short">Logar</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
