<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/atma_semibold"
        android:hint="@string/username"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#CC0045"
        android:textColorLink="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"/>

    <EditText
        android:id="@+id/email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/atma_semibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#CC0045"
        android:textColorLink="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/atma_semibold"
        android:hint="@string/cpf"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#CC0045"
        android:textColorLink="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/atma_semibold"
        android:hint="@string/celular"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#CC0045"
        android:textColorLink="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpf"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/atma_semibold"
        android:hint="@string/password"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#CC0045"
        android:textColorLink="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celular"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/atma_semibold"
        android:hint="@string/repassword"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#CC0045"
        android:textColorLink="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <!-- Cabeçalho -->

    <TextView
        android:id="@+id/TxtView_RetornaLogin"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/atma_semibold"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:text="Já tenho Conta"/>

    <Button
        android:id="@+id/login"
        android:layout_width="125dp"
        android:layout_height="58dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/gradient_background"
        android:enabled="true"
        android:fontFamily="@font/atma_semibold"
        android:text="@string/cadastrar"
        android:textColor="#FFF8EC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.474" />


    <!-- Rodapé -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_background"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TxtView_Cadastro_Titulo"
            android:layout_width="219dp"
            android:layout_height="73dp"
            android:layout_alignStart="@+id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="51dp"
            android:fontFamily="@font/atma_semibold"
            android:text="@string/cadastro"
            android:textAlignment="center"
            android:textColor="#FFF7E0"
            android:textSize="50dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/petlove_icon"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/gradient_background"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/TxtView_Direitos"
            android:layout_width="536dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="182dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="-32dp"
            android:fontFamily="@font/atma_semibold"
            android:text="PetLove ₢ - Todos os Direitos Reservados"
            android:textAlignment="center"
            android:textColor="@color/branco"
            android:textSize="18dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>